// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Term HOC component match expected snapshot for simple term 1`] = `
<Connect(Term)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  term={
    Object {
      "id": 1,
      "value": "Тем",
    }
  }
>
  <Term
    dispatch={[Function]}
    locale="ru"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    term={
      Object {
        "id": 1,
        "value": "Тем",
      }
    }
  >
    <span>
      Тем
    </span>
  </Term>
</Connect(Term)>
`;

exports[`Term HOC component match expected snapshot for simple term with spase after 1`] = `
<Connect(Term)
  spaceAfter={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  term={
    Object {
      "id": 1,
      "value": "Тем",
    }
  }
>
  <Term
    dispatch={[Function]}
    locale="ru"
    spaceAfter={true}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    term={
      Object {
        "id": 1,
        "value": "Тем",
      }
    }
  >
    <span>
      Тем 
    </span>
  </Term>
</Connect(Term)>
`;

exports[`Term HOC component match expected snapshot for simple term with spase before and after 1`] = `
<Connect(Term)
  spaceAfter={true}
  spaceBefore={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  term={
    Object {
      "id": 1,
      "value": "Тем",
    }
  }
>
  <Term
    dispatch={[Function]}
    locale="ru"
    spaceAfter={true}
    spaceBefore={true}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    term={
      Object {
        "id": 1,
        "value": "Тем",
      }
    }
  >
    <span>
       Тем 
    </span>
  </Term>
</Connect(Term)>
`;

exports[`Term HOC component match expected snapshot for term with spase before 1`] = `
<Connect(Term)
  spaceBefore={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  term={
    Object {
      "id": 1,
      "value": "Тем",
    }
  }
>
  <Term
    dispatch={[Function]}
    locale="ru"
    spaceBefore={true}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    term={
      Object {
        "id": 1,
        "value": "Тем",
      }
    }
  >
    <span>
       Тем
    </span>
  </Term>
</Connect(Term)>
`;
